# ais-anomaly-api/docs/swagger.json
@@ -182,6 +182,10 @@
                 "metadata": {
                     "type": "object"
                 },
+                "signalStrength": {
+                    "type": "number",
+                    "example": -95.5
+                },
                 "sourceId": {
                     "type": "integer",
                     "example": 1
