# ais-anomaly-api/models/anomaly.go
@@ -73,6 +73,7 @@ type AnomalyDB struct {
 	AnomalyGroupID *int64          `json:"anomalyGroupId,omitempty"`
 	DataSource     string          `json:"dataSource"`
 	SourceID       *int64          `json:"sourceId,omitempty"`
+	SignalStrength *float64        `json:"signalStrength"`
 }
 
 // Anomaly represents an individual anomaly for API response (without type and mmsi)
@@ -83,6 +84,7 @@ type Anomaly struct {
 	AnomalyGroupID *int64          `json:"anomalyGroupId,omitempty" example:"1"`
 	DataSource     string          `json:"dataSource" example:"SYNTHETIC"`
 	SourceID       *int64          `json:"sourceId,omitempty" example:"1"`
+	SignalStrength *float64        `json:"signalStrength" example:"-95.5"`
 }
 
 // ToAPIAnomaly converts AnomalyDB to Anomaly (removing type and mmsi)
@@ -94,6 +96,7 @@ func (a *AnomalyDB) ToAPIAnomaly() Anomaly {
 		AnomalyGroupID: a.AnomalyGroupID,
 		DataSource:     a.DataSource,
 		SourceID:       a.SourceID,
+		SignalStrength: a.SignalStrength,
 	}
 }
 
